--- a/src/svc1_first_auto_service/svc1_first_auto_service/static/theme.css
+++ b/src/svc1_first_auto_service/svc1_first_auto_service/static/theme.css
@@ -2,8 +2,8 @@
 body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
-  color: #ffffff;
-  background: #bc2131;
+  color: black;
+  background: white;
 }
 h1,
 h2,
@@ -45,7 +45,7 @@ p {
   color: #f2b7bd;
 }
 .starter-template .content .lead .font-normal {
-  color: #ffffff;
+  color: black;
 }
 .starter-template .links {
   float: right;
